--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Finding The Way Home
+title: J`s Blog
 cover: 'assets/images/cover/main.jpeg'
 class: 'home-template'
-navigation: True
 current: home
 ---
 <!-- < default -->
@@ -14,9 +13,7 @@ current: home
         style="background-image: url({{ site.baseurl }}{{ page.cover }}) {% else %}no-cover{% endif %}">
     <nav class="main-nav overlay clearfix">
         {% include logo.html %}  
-        {% if page.navigation %}
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {% endif %}
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
